--- a/diy.css
+++ b/diy.css
@@ -2983,17 +2983,17 @@ a:hover.dcy_video:before {
     
 }
 .dcy-shop-single-y ul.dcy-slideshow-items{
-    height: 710px;
+    height: 580x;
     border: 5px solid #ffffff24;
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 45px 80px -24px #006fff7a;
 }
 .dcy-shop-single-y ul.dcy-slideshow-items li{
-    height: 710px;
+    height: 580px;
 }
 .dcy-shop-single-y ul.dcy-slideshow-items li img{
-    height: 710px;
+    height: 580px;
     width: 100%;
 }
 .dcy-shop-single-ybo{
