--- a/diy.css
+++ b/diy.css
@@ -2983,7 +2983,7 @@ a:hover.dcy_video:before {
     
 }
 .dcy-shop-single-y ul.dcy-slideshow-items{
-    height: 580x;
+    height: 580px;
     border: 5px solid #ffffff24;
     border-radius: 10px;
     overflow: hidden;
